tests/tests_p1/pass/prof/03ok.min
module
	function forward number argc done
end
