tests/tests_p1/fail/prof/05noargs.min
program
	function forward number argc number i done
start
	argc!
end
function takes arguments!
